// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Rendering Tests should render basic table correctly 1`] = `
"┌────┬──────┬───────┐
│[37m [0m[01mid[0m │[37m [0m[01mname[0m │[37m [0m[01mscore[0m │
├────┼──────┼───────┤
│[37m [0m[37m 1[0m │[37m [0m[37mJohn[0m │[37m [0m[37m   85[0m │
│[37m [0m[37m 2[0m │[37m [0m[37mJane[0m │[37m [0m[37m   92[0m │
│[37m [0m[37m 3[0m │[37m [0m[37m Bob[0m │[37m [0m[37m   78[0m │
└────┴──────┴───────┘"
`;

exports[`Table Rendering Tests should render empty table correctly 1`] = `
"┌──────┬──────┐
│[37m [0m[01mcol1[0m │[37m [0m[01mcol2[0m │
├──────┼──────┤
└──────┴──────┘"
`;

exports[`Table Rendering Tests should render grouped columns headers 1`] = `
"          ┌──────────────┐    ┌──────────────┐
 [37m [0m[01m       [0m │[37m [0m[01mG1          [0m │[37m [0m[01m  [0m │[37m [0m[01m VERY LONG  [0m │[37m [0m[01m       [0m  
┌────┬────┼────┬─────────┼────┼────┬────┬────┼─────────┐
│[37m [0m[01m A[0m │[37m [0m[01m B[0m │[37m [0m[01m C[0m │[37m [0m[01m      D[0m │[37m [0m[01m E[0m │[37m [0m[01m F[0m │[37m [0m[01m G[0m │[37m [0m[01m H[0m │[37m [0m[01m      I[0m │
├────┼────┼────┼─────────┼────┼────┼────┼────┼─────────┤
│[37m [0m[37mA1[0m │[37m [0m[37mB1[0m │[37m [0m[37mC1[0m │[37m [0m[37m     D1[0m │[37m [0m[37mE1[0m │[37m [0m[37mF1[0m │[37m [0m[37mG1[0m │[37m [0m[37mH1[0m │[37m [0m[37mI 00001[0m │
│[37m [0m[37mA2[0m │[37m [0m[37mB2[0m │[37m [0m[37mC2[0m │[37m [0m[37mD 00002[0m │[37m [0m[37mE2[0m │[37m [0m[37mF2[0m │[37m [0m[37mG2[0m │[37m [0m[37mH2[0m │[37m [0m[37m     I2[0m │
└────┴────┴────┴─────────┴────┴────┴────┴────┴─────────┘"
`;

exports[`Table Rendering Tests should render table with colors 1`] = `
"┌──────────┬────────────┬───────────┐
│[37m [0m[01m red_col[0m │[37m [0m[01m green_col[0m │[37m [0m[01m blue_col[0m │
├──────────┼────────────┼───────────┤
│[37m [0m[31mRed text[0m │[37m [0m[32mGreen text[0m │[37m [0m[34mBlue text[0m │
│[37m [0m[31m     111[0m │[37m [0m[32m       222[0m │[37m [0m[34m      333[0m │
└──────────┴────────────┴───────────┘"
`;

exports[`Table Rendering Tests should render table with different alignments 1`] = `
"┌──────────┬────────────┬───────────┐
│[37m [0m[01mleft_col[0m │[37m [0m[01mcenter_col[0m │[37m [0m[01mright_col[0m │
├──────────┼────────────┼───────────┤
│[37m [0m[37mLeft    [0m │[37m [0m[37m  Center  [0m │[37m [0m[37m    Right[0m │
│[37m [0m[37m111     [0m │[37m [0m[37m   222    [0m │[37m [0m[37m      333[0m │
└──────────┴────────────┴───────────┘"
`;

exports[`Table Rendering Tests should render table with mixed styling 1`] = `
"┌────┬──────┬──────────┐
│[37m [0m[01mid[0m │[37m [0m[01mname[0m │[37m [0m[01m status [0m │
├────┼──────┼──────────┤
│[37m [0m[34m 1[0m │[37m [0m[33mJohn[0m │[37m [0m[32m Active [0m │
│[37m [0m[34m 2[0m │[37m [0mJane │[37m [0m[32mInactive[0m │
└────┴──────┴──────────┘"
`;

exports[`Table Rendering Tests should render table with row colors 1`] = `
"┌──────┬────────┬───────┐
│[37m [0m[01mname[0m │[37m [0m[01mstatus[0m │[37m [0m[01mscore[0m │
├──────┼────────┼───────┤
│[37m [0m[32mJohn[0m │[37m [0m[32m  Pass[0m │[37m [0m[32m   95[0m │
│[37m [0m[31mJane[0m │[37m [0m[31m  Fail[0m │[37m [0m[31m   45[0m │
│[37m [0m[32m Bob[0m │[37m [0m[32m  Pass[0m │[37m [0m[32m   85[0m │
└──────┴────────┴───────┘"
`;

exports[`Table Rendering Tests should render table with special characters 1`] = `
"┌─────────────┬────────────────────────┐
│[37m [0m[01m    symbols[0m │[37m [0m[01m           description[0m │
├─────────────┼────────────────────────┤
│[37m [0m[37m !@#$%^&*()[0m │[37m [0m[37m    Special characters[0m │
│[37m [0m[37m│─┌┐└┘├┤┬┴┼[0m │[37m [0m[37mBox drawing characters[0m │
│[37m [0m[37m       ♠♣♥♦[0m │[37m [0m[37m            Card suits[0m │
└─────────────┴────────────────────────┘"
`;
